fix: исправлен gap

--- a/src/components/AdminCardTable/AdminCardTable.module.scss
+++ b/src/components/AdminCardTable/AdminCardTable.module.scss
@@ -8,7 +8,7 @@
 
 .line{
     display: flex;
-    gap: 18px;
+    gap: 20px;
     align-items: center;
     margin-bottom: 23px;
     padding: 8px 0;
